--- a/.github/workflows/cppcheck.yml
+++ b/.github/workflows/cppcheck.yml
@@ -14,4 +14,4 @@ jobs:
       run: sudo apt-get install -y cppcheck
 
     - name: Run cppcheck
-      run: cppcheck --enable=all --error-exitcode=1 .
+      run: cppcheck --enable=all --error-exitcode=1 --suppress=missingIncludeSystem .
